# DnD_RAG_Chat

./: .gitignore  README.md  install_deps.py  pyproject.toml
app_db/: app_data_db.py  decl_base.py  init_db.py
llm_common/: endpoints.py  persona.py
log/: logger.py
src/angular_client/: package-lock.json
src/angular_client/frontend-client/: README.md  angular.json  package-lock.json  package.json
src/angular_client/frontend-client/src/app/: app.component.spec.ts  app.component.ts
src/app_db/: app_data_db.py  decl_base.py  init_db.py
src/data_management/app_db/: app_data_db.py  init_db.py
src/data_management/app_db/data_table_classes/: conversation.py  persona.py  session_settings.py
src/data_management/data_models/config/: endpoints.py
src/data_management/data_models/data_classes/: conversation.py  persona.py  session_settings.py
src/data_management/data_models/dnd_pydantic_base/: base_model.py
src/dnd_pydantic_base/: base_model.py
src/llm_common/: conversation.py  endpoints.py  persona.py  session_settings.py  uuid_type.py
src/web_apps/: main.py
src/web_apps/backend/: flask_backend_app.py  main.py
src/web_apps/base_class/: web_app.py
src/web_apps/frontend/: flask_frontend_app.py  main.py
src/web_apps/frontend/static/js/: script.js
src/web_apps/frontend/templates/: index.html
src/web_ui/: app.py
src/web_ui/static/config/: themes.json
src/web_ui/static/css/: styles.css
src/web_ui/static/js/: script.js
src/web_ui/templates/: index.html
web_ui/: app.py
web_ui/static/js/: script.js
web_ui/templates/: index.html
web_ui/web_ui_app/: app.py
web_ui/web_ui_app/templates/: index.html  script.js  styles.css  themes.json
