[project]
name = "DnD_RAG_Chat"
version = "0.0.1"
description = "RAG tool to help do things related to DMing or player character sheet design / homebrewing etc."
authors = [
    {name = "KotoroShinoto", email = "goochmi@gmail.com"},
]
dependencies = ["click>=8.1.8", "urlpath>=1.2.0", "pydantic>=2.10.4", "flask>=3.1.0", "requests>=2.32.3"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "The Unlicense"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
